[gd_scene load_steps=18 format=3 uid="uid://mgs8ef2jfsy1"]

[ext_resource type="Script" path="res://scenes/golfers/base_scene/golfer.gd" id="1_87tke"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/state_machine.gd" id="2_siak4"]
[ext_resource type="PackedScene" uid="uid://c1bxfadcm7t5u" path="res://scenes/golfers/lump_detector.tscn" id="2_xra0f"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/states/follow_path.gd" id="3_q4j2i"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/states/trip.gd" id="4_4nvov"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/states/reset_tee.gd" id="5_r8hre"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/states/idle.gd" id="6_g7k4g"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/states/go_to_position.gd" id="7_4hbe3"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/states/golf.gd" id="8_016qn"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/states/notice_hog.gd" id="9_ycboq"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/states/get_angry.gd" id="10_g3164"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/mud_detector.gd" id="11_nc1tr"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/states/dance.gd" id="12_0ua46"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/state_machine/states/pout.gd" id="13_pquxa"]
[ext_resource type="Script" path="res://scenes/golfers/base_scene/notice_radio.gd" id="14_vamns"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xxynn"]
height = 1.51473
radius = 0.201329

[sub_resource type="BoxShape3D" id="BoxShape3D_bpw3h"]
size = Vector3(0.840088, 0.342896, 0.563965)

[node name="Golfer" type="CharacterBody3D"]
collision_layer = 64
collision_mask = 0
script = ExtResource("1_87tke")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.766986, 0)
shape = SubResource("CylinderShape3D_xxynn")

[node name="LumpDetector" parent="." instance=ExtResource("2_xra0f")]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_siak4")

[node name="FollowPath" type="Node" parent="StateMachine"]
script = ExtResource("3_q4j2i")

[node name="Trip" type="Node" parent="StateMachine"]
script = ExtResource("4_4nvov")

[node name="ResetTee" type="Node" parent="StateMachine"]
script = ExtResource("5_r8hre")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_g7k4g")

[node name="GoToPosition" type="Node" parent="StateMachine"]
script = ExtResource("7_4hbe3")

[node name="Golf" type="Node" parent="StateMachine"]
script = ExtResource("8_016qn")

[node name="NoticeHog" type="Node" parent="StateMachine"]
script = ExtResource("9_ycboq")

[node name="GetAngry" type="Node" parent="StateMachine"]
script = ExtResource("10_g3164")

[node name="Dance" type="Node" parent="StateMachine"]
script = ExtResource("12_0ua46")

[node name="StopDance" type="Node" parent="StateMachine"]
script = ExtResource("13_pquxa")

[node name="NoticeRadio" type="Node" parent="StateMachine"]
script = ExtResource("14_vamns")

[node name="Pivot" type="Node3D" parent="."]

[node name="MudDetector" type="Area3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.398094, -0.751606, 0.0110581)
script = ExtResource("11_nc1tr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pivot/MudDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0384521, 0.777457, -0.0388184)
shape = SubResource("BoxShape3D_bpw3h")

[node name="ModelGoesHere" type="Node3D" parent="Pivot"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[connection signal="body_entered" from="LumpDetector" to="." method="_on_lump_detector_body_entered"]
[connection signal="state_ended" from="StateMachine/Trip" to="." method="_on_trip_state_ended"]
